--- a/css/sidebar/sidebar.scss
+++ b/css/sidebar/sidebar.scss
@@ -240,6 +240,7 @@
 
         &.active {
           background: var(--color_primary);
+          background-image: radial-gradient(90deg, #0D3772, #042048);
           color: var(--color_white);
           box-shadow: 0 7px 12px 0 var(--color_lightprimary);
 
