--- a/css/app/app.scss
+++ b/css/app/app.scss
@@ -1,5 +1,4 @@
 @import url("../header/header.css");
-// @import url('../index/index.scss');
 @import "../sidebar//sidebar.scss";
 @import "../earn/earn.scss";
 @import "../balance/balance.scss";
@@ -8,7 +7,6 @@
 @import "../faq//faq.scss";
 @import "../drawer/drawer.scss";
 @import "../variables/variables.scss";
-// @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=Exchange");
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=Exchange');
 
 
@@ -337,6 +335,10 @@ label.label {
   color: var(--color_dark);
   font-weight: 500 !important;
 
+  &.white {
+    color: var(--color_white);
+  }
+
   &.attachFile {
     border-radius: 0.5rem;
     width: 100%;
@@ -471,6 +473,10 @@ h5.conform_small {
   font-size: 1.6rem;
   text-align: center;
   color: var(--color_dark);
+
+  &.white {
+    color: var(--color_white);
+  }
 }
 
 h6.conform_text {
@@ -842,6 +848,165 @@ h6.conform_text {
         font-size: 1.2rem;
         color: var(--color_secondary);
         font-weight: 400;
+      }
+    }
+  }
+}
+
+.owl_card_slider {
+  margin-top: 1.5rem;
+
+  .owl_getCard {
+    display: block;
+  }
+
+  .owl-nav {
+    display: none;
+  }
+
+  .owl-controls {
+    .owl-pagination {
+      display: flex;
+      align-items: center;
+      justify-content: left;
+
+      .owl-page {
+        margin-top: 1rem;
+        text-align: left;
+
+        span {
+          background-color: var(--color_dots) !important;
+          transition: 0.5s;
+          margin: 0.3rem !important;
+        }
+
+        &.active {
+          span {
+            background-color: var(--color_primary) !important;
+            width: 4rem;
+          }
+        }
+      }
+    }
+  }
+
+  .owl-item {
+    min-height: 20rem !important;
+    margin-right: 1.5rem;
+
+    .item {
+      min-height: 20rem !important;
+      height: 100%;
+
+      .slider_card {
+        border-radius: 1rem;
+        padding: 1.5rem;
+        height: 100%;
+        min-height: 20rem !important;
+        height: 100%;
+        border: 1px solid var(--border_color);
+        background-image: linear-gradient(-180deg, #60CFB0, #20926F);
+        position: relative;
+
+
+        .decoration {
+          height: 9rem;
+          width: 9rem;
+          filter: grayscale(100%);
+          opacity: 1;
+          position: absolute;
+          top: 30%;
+          right: 2rem;
+        }
+
+        h5 {
+          font-size: 1.6rem;
+          color: var(--color_primary);
+          font-weight: 500;
+        }
+
+        .card_symbol {
+          height: 4.5rem;
+          width: 4.5rem;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          padding: 0.2rem;
+
+          img {
+            height: 100%;
+            width: 100%;
+          }
+        }
+
+        p.symbol_name {
+          font-size: 2rem;
+          color: var(--color_white);
+          margin-top: 1rem;
+          text-transform: capitalize;
+          font-weight: 600;
+          text-align: left;
+        }
+
+        .slider_card_svg {
+          text-align: right;
+          height: 10rem;
+          width: 10rem;
+          padding: 0.6rem;
+          margin: 0 auto;
+          opacity: 0.4;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 2;
+
+          svg,
+          img {
+            max-width: 100%;
+            max-height: 100%;
+          }
+        }
+
+        button.refer_btn {
+          background-color: var(--color_primary);
+          color: var(--color_white);
+          padding: 0.8rem 2.2rem;
+          font-size: 1.2rem;
+          margin-top: 2rem;
+        }
+
+        .slider_card_content {
+          margin-top: 6rem;
+
+          p {
+            font-size: 3rem;
+            color: var(--color_white);
+            font-weight: 600;
+            margin-bottom: 0;
+
+            span {
+              font-size: 1.8rem;
+              font-weight: 500;
+              color: var(--color_white);
+            }
+          }
+
+          h6 {
+            font-size: 1.8rem;
+            color: var(--color_white);
+            font-weight: 600;
+            margin-top: 0;
+            margin-bottom: 0;
+          }
+
+          span {
+            font-size: 1.2rem;
+            color: var(--color_secondary);
+            margin-left: 0.5rem;
+          }
+        }
       }
     }
   }
@@ -1272,6 +1437,10 @@ h3.title_big {
   color: var(--color_primary);
   font-weight: 700;
   margin-top: 1.5rem;
+
+  &.white {
+    color: var(--color_white);
+  }
 }
 
 
@@ -1397,6 +1566,134 @@ button.exchage_btn {
       font-size: 1.4rem;
       font-weight: 500;
       color: var(--color_primary);
+
+      &.white {
+        color: var(--color_white);
+      }
+    }
+  }
+}
+
+
+
+.cards {
+  border: 1px solid var(--border_color);
+  border-radius: 1rem;
+  background-color: var(--color_white);
+
+  .card_header {
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--border_color);
+
+    .symols {
+      display: flex;
+      align-items: center;
+
+      img {
+        height: 4rem;
+        width: 4rem;
+        border-radius: 50%;
+      }
+
+      p {
+        font-size: 1.8rem;
+        font-weight: 700;
+        color: var(--color_primary);
+        text-transform: uppercase;
+        padding-left: 1rem;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .card_body {
+    padding: 1.5rem;
+  }
+}
+
+.card_earn {
+  border-radius: 1rem;
+  padding: 1.5rem;
+  background-image: linear-gradient(180deg, #168D69, #07694B);
+
+  .card_earn_header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    .left {
+      max-width: 80%;
+
+      h5 {
+        font-size: 2.2rem;
+        color: var(--color_white);
+        font-weight: 600;
+        margin-bottom: 0;
+      }
+
+      p {
+        font-size: 1.3rem;
+        color: var(--color_white);
+        font-weight: 500;
+        max-width: 70%;
+      }
+    }
+
+    .right {
+      max-width: 20%;
+
+      h5 {
+        font-size: 1.6rem;
+        font-weight: 500;
+        color: var(--color_white);
+        margin-bottom: 0;
+      }
+
+      p {
+        font-size: 2.2rem;
+        color: var(--color_white);
+        font-weight: 700;
+      }
+    }
+  }
+
+
+  .card_earn_body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 2rem;
+
+    .left {
+      max-width: 80%;
+
+      h5 {
+        font-size: 2.2rem;
+        color: var(--color_white);
+        font-weight: 600;
+        margin-bottom: 0;
+      }
+
+      p {
+        font-size: 1.3rem;
+        color: var(--color_white);
+        font-weight: 500;
+        max-width: 70%;
+        opacity: 0.8;
+        margin-bottom: 0;
+      }
+    }
+
+    .right {
+      max-width: 20%;
+
+      a {
+        height: 2rem;
+        color: var(--color_white);
+      }
     }
   }
 }
