--- a/css/balance/balance.scss
+++ b/css/balance/balance.scss
@@ -169,8 +169,28 @@
   h4.amount {
     font-size: 2.4rem;
     font-weight: 600;
-    color: var(--color_dark);
-    margin-top: 4rem;
+    color: var(--color_primary);
+    margin-top: 2rem;
+
+    span {
+      color: var(--color_primary);
+      font-weight: 700;
+
+      &:first-child {
+        font-size: 4rem;
+      }
+
+      &:last-child {
+        font-size: 2.8rem;
+      }
+    }
+
+    &.filled {
+      background-color: var(--color_primary);
+      padding: 0.8rem 2rem;
+      border-radius: 0.6rem;
+      color: var(--color_white);
+    }
 
     &.dark {
       color: var(--color_dark);
@@ -310,139 +330,29 @@
   }
 }
 
-.owl_card_slider {
-  margin-top: 1.5rem;
+.form-check {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  margin-top: 3rem;
 
-  .owl_getCard {
-    display: block;
-  }
+  input.form-check-input {
+    height: 2 rem;
+    width: 2 rem;
+    box-shadow: none;
+    color: var(--color_primary);
+    border: 1px solid var(--color_secondary);
 
-  .owl-nav {
-    display: none;
-  }
-
-  .owl-controls {
-    .owl-pagination {
-      display: flex;
-      align-items: center;
-      justify-content: left;
-
-      .owl-page {
-        margin-top: 1rem;
-        text-align: left;
-
-        span {
-          background-color: var(--color_dots) !important;
-          transition: 0.5s;
-          margin: 0.3rem !important;
-        }
-
-        &.active {
-          span {
-            background-color: var(--color_primary) !important;
-            width: 4rem;
-          }
-        }
-      }
+    &:checked {
+      background-color: var(--color_primary);
+      border-color: var(--color_primary);
     }
   }
 
-  .owl-item {
-    min-height: 20rem !important;
-    margin-right: 1.5rem;
 
-    .item {
-      min-height: 20rem !important;
-
-      .slider_card {
-        border-radius: 1rem;
-        padding: 1.5rem;
-        height: 100%;
-        min-height: 20rem !important;
-        text-align: center;
-        background-color: var(--color_white);
-        border: 1px solid var(--border_color);
-
-        h5 {
-          font-size: 1.6rem;
-          color: var(--color_primary);
-          font-weight: 500;
-        }
-
-        .card_symbol {
-          height: 4.5rem;
-          width: 4.5rem;
-          border-radius: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          padding: 0.2rem;
-          margin: 0 auto;
-
-          img {
-            height: 100%;
-            width: 100%;
-          }
-        }
-
-        p.symbol_name {
-          font-size: 2rem;
-          color: var(--color_dark);
-          margin-top: 1rem;
-          text-transform: uppercase;
-          font-weight: 500;
-        }
-
-        .slider_card_svg {
-          text-align: right;
-          height: 10rem;
-          width: 10rem;
-          padding: 0.6rem;
-          margin: 0 auto;
-          opacity: 0.4;
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          z-index: 2;
-
-          svg,
-          img {
-            max-width: 100%;
-            max-height: 100%;
-          }
-        }
-
-        button.refer_btn {
-          background-color: var(--color_primary);
-          color: var(--color_white);
-          padding: 0.8rem 2.2rem;
-          font-size: 1.2rem;
-          margin-top: 2rem;
-        }
-
-        .slider_card_content {
-          p {
-            font-size: 1.3rem;
-            color: var(--color_secondary);
-            margin-bottom: 0.5rem;
-          }
-
-          h6 {
-            font-size: 2.2rem;
-            color: var(--color_primary);
-            font-weight: 600;
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
-          }
-
-          span {
-            font-size: 1.2rem;
-            color: var(--color_secondary);
-            margin-left: 0.5rem;
-          }
-        }
-      }
-    }
+  .form-check-label {
+    font-size: 1.3rem;
+    color: var(--color_dark);
+    padding-left: 1rem;
   }
 }
