--- a/css/drawer/drawer.scss
+++ b/css/drawer/drawer.scss
@@ -1,5 +1,7 @@
 .drawer_boost {
   width: auto !important;
+  // background-color: var(--color_primary) !important;
+  background-color: #062148 !important;
 
   .offcanvas-body {
     max-width: 50rem;
@@ -26,13 +28,13 @@
   }
 
   button.close_drawer {
-    background-color: var(--color_lightprimary);
+    background-color: transparent;
     min-width: 3rem;
-    min-height: 3rem;
+    min-height: 2.8rem;
     max-width: 3rem;
     border-radius: 0.5rem;
     padding: 0.6rem;
-    color: var(--color_primary);
+    color: var(--color_white);
     margin-bottom: 1rem;
     margin: 0.5rem;
 
@@ -42,7 +44,8 @@
   }
 
   .tab_drawer {
-    border: 1px solid var(--border_color);
+    border: none;
+    background-color: #04142B !important;
     border-radius: 0.4rem;
     padding: 0.4rem;
     margin-bottom: 1rem;
@@ -65,10 +68,19 @@
         border: none !important;
 
         &.active {
-          background: var(--color_primary);
-          color: var(--color_white);
+          background: rgba(222, 227, 234, 1) !important;
+          background-color: rgba(222, 227, 234, 1) !important;
+          color: var(--color_primary) !important;
+          font-weight: 600 !important;
         }
       }
+    }
+  }
+
+
+  .drawer_select_item {
+    &.filled {
+      background-color: rgba(0, 0, 0, 0.4) !important;
     }
   }
 
@@ -146,7 +158,7 @@
   // Address Code
   .address_code {
     margin-top: 1.5rem;
-    border-top: 1px solid var(--color_grey);
+    border-top: none;
 
     &.bn {
       border-top: none;
@@ -182,8 +194,10 @@
       box-shadow: none;
       border: none;
       border-radius: 0.6rem;
-      border: 1px solid var(--color_grey);
+      // border: 1px solid var(--color_grey);
       border-radius: 0.5rem;
+      overflow: hidden;
+      background-color: #04142B !important;
 
       &::before {
         display: none;
@@ -192,6 +206,8 @@
       .select_symbol {
         display: flex;
         align-items: center;
+        // background-color: rgba(0, 0, 0, 40%) !important;
+        border-bottom: 1px solid rgba($color: #ffffff, $alpha: 0.2);
 
         .symbol {
           max-height: 2.6rem;
@@ -207,7 +223,7 @@
           p {
             font-size: 1.4rem;
             font-weight: 600;
-            color: var(--color_primary);
+            color: var(--color_white);
             text-transform: capitalize;
             margin-bottom: 0;
           }
@@ -223,8 +239,8 @@
       }
 
       .qr_code {
-        max-width: 16rem;
-        max-height: 16rem;
+        max-width: 18rem;
+        max-height: 18rem;
         height: 100%;
         width: 100%;
         margin: 1rem auto;
@@ -238,12 +254,11 @@
 
       .copy_address_box {
         margin-top: 1rem;
-        border-top: 1px solid var(--color_grey);
+        border-top: 1px solid rgba($color: #FFFFFF, $alpha: 0.2);
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 0 1rem;
-        padding-top: 1rem;
+        padding: 1.5rem 1rem;
 
         .addres_Navlink {
           p {
@@ -255,7 +270,7 @@
 
           h5 {
             font-size: 1.4rem;
-            color: var(--color_primary);
+            color: var(--color_white);
             max-width: 22rem;
             width: 100%;
             overflow: hidden;
@@ -289,7 +304,7 @@
     }
 
     .tips_box {
-      background-color: var(--color_lightprimary);
+      background-color: #04142B;
       color: var(--color_secondary);
       padding: 1rem;
       border-radius: 0.5rem;
@@ -313,8 +328,8 @@
           padding: 0.5rem 0.8rem;
           font-size: 1.1rem;
           // border: 1px solid var(--color_secondary);
-          color: var(--color_primary);
-          background-color: var(--color_lightprimary);
+          color: var(--color_white);
+          background-color: #04142B;
           margin: 0 0.2rem 0 0;
           min-width: 4rem;
         }
