--- a/css/balance/balance.scss
+++ b/css/balance/balance.scss
@@ -97,7 +97,7 @@
   .page_title {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: left;
 
     button.page_icon {
       height: 2.8rem;
