--- a/css/balance/balance.css
+++ b/css/balance/balance.css
@@ -95,9 +95,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
 }
 
 .balanceCard_box .page_title button.page_icon {
