--- a/css/drawer/drawer.scss
+++ b/css/drawer/drawer.scss
@@ -1,7 +1,9 @@
 .drawer_boost {
   width: auto !important;
   // background-color: var(--color_primary) !important;
-  background-color: #062148 !important;
+  // background-color: #062148 !important;
+  background: rgb(15, 55, 113);
+  background: radial-gradient(circle, rgba(15, 55, 113, 1) 16%, rgba(6, 33, 72, 1) 97%);
 
   .offcanvas-body {
     max-width: 50rem;
@@ -325,13 +327,13 @@
         align-items: center;
 
         button.per_btn {
-          padding: 0.5rem 0.8rem;
-          font-size: 1.1rem;
-          // border: 1px solid var(--color_secondary);
+          padding: 0.8rem 1.5rem;
+          font-size: 1.3rem;
+          border-radius: 0.5rem;
           color: var(--color_white);
-          background-color: #04142B;
+          background-color: rgba($color: #000000, $alpha: 0.4);
           margin: 0 0.2rem 0 0;
-          min-width: 4rem;
+          min-width: 5rem;
         }
       }
 
